--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 hyper = "0.12"
+clap = "2.32.0"
 
 [features]
 memmap = ["maxminddb/memmap"]
