--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 hyper = "0.12"
 clap = "2.32.0"
+httpdate = "0.3.2"
 
 [dev-dependencies]
 criterion = "0.2"
