--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0"
 hyper = "0.12"
 clap = "2.32.0"
 httpdate = "0.3.2"
+futures = "0.1.25"
 
 [dev-dependencies]
 criterion = "0.2"
