trivial: cleanup inactive db benches
Not using these for now, but give it a reasonable name and set it to use the testdata directory to avoid confusion since it's still sitting around in source code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ criterion = "0.2"
 [[bench]]
 name = "http_benchmarks"
 harness = false
+
+# [[bench]]
+# name = "db_benchmarks"
+# harness = false
